--- a/demo-rpc-api/pom.xml
+++ b/demo-rpc-api/pom.xml
@@ -18,5 +18,11 @@
 			<groupId>com.hundsun.jrescloud</groupId>
 			<artifactId>jrescloud-starter-rpc-def</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.hundsun.jrescloud.demo.rpc</groupId>
+            <artifactId>demo-rpc-server</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
