添加自定义校验功能

--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -9,3 +9,4 @@ config.location=classpath:middleware.properties
 hs.license.licenceNo=12868
 hs.permit-center.server.ip=127.0.0.1
 hs.permit-center.server.port=9090
+hs.license.custom.check.className=com.hundsun.jrescloud.demo.rpc.server.common.base.CustomCheckTest
