--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -6,7 +6,6 @@ app.deploy.version=1.0
 
 config.location=classpath:middleware.properties
 
-hs.license.licenceNo=12868
-hs.permit-center.server.ip=127.0.0.1
-hs.permit-center.server.port=9090
-hs.license.custom.check.className=com.hundsun.jrescloud.demo.rpc.server.common.base.CustomCheckTest
+hs.license.licenceNo=52e5d1702c554b4bb9058658b05af9f0
+hs.permit-center.server.ip=10.20.23.83
+hs.permit-center.server.port=8024
