--- a/demo-rpc-api/pom.xml
+++ b/demo-rpc-api/pom.xml
@@ -25,5 +25,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.hundsun.jrescloud</groupId>
+            <artifactId>jrescloud-starter-mq-amqp</artifactId>
+        </dependency>
     </dependencies>
 </project>
