--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -9,3 +9,21 @@ config.location=classpath:middleware.properties
 hs.license.licenceNo=52e5d1702c554b4bb9058658b05af9f0
 hs.permit-center.server.ip=10.20.23.83
 hs.permit-center.server.port=8024
+
+
+
+hs.mq.binder.local_rabbit.type=rabbit
+hs.mq.binder.local_rabbit.host=127.0.0.1
+hs.mq.binder.local_rabbit.port=5672
+hs.mq.binder.local_rabbit.username=guest
+hs.mq.binder.local_rabbit.password=guest
+
+hs.mq.bindings.output.output1.binder=local_rabbit
+hs.mq.bindings.output.output1.destination=exchange.topic
+
+
+hs.mq.bindings.input.input1.binder=local_rabbit
+hs.mq.bindings.input.input1.destination=exchange.topic
+hs.mq.bindings.input.input1.group=myqueue
+
+
