--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -18,12 +18,12 @@ hs.mq.binder.local_rabbit.port=5672
 hs.mq.binder.local_rabbit.username=guest
 hs.mq.binder.local_rabbit.password=guest
 
-hs.mq.bindings.output.output1.binder=local_rabbit
-hs.mq.bindings.output.output1.destination=exchange.topic
+hs.mq.bindings.output.licenseProvider.binder=local_rabbit
+hs.mq.bindings.output.licenseProvider.destination=exchange.licence
 
 
-hs.mq.bindings.input.input1.binder=local_rabbit
-hs.mq.bindings.input.input1.destination=exchange.topic
-hs.mq.bindings.input.input1.group=myqueue
+hs.mq.bindings.input.licenseConsumer.binder=local_rabbit
+hs.mq.bindings.input.licenseConsumer.destination=exchange.licence
+hs.mq.bindings.input.licenseConsumer.group=licenceQueue
 
 
