--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -6,24 +6,36 @@ app.deploy.version=1.0
 
 config.location=classpath:middleware.properties
 
-hs.license.licenceNo=52e5d1702c554b4bb9058658b05af9f0
-hs.permit-center.server.ip=10.20.23.83
-hs.permit-center.server.port=8024
+hs.license.licenceNo=478430cad04148798b4bf94709b39287
+#hs.permit-center.server.ip=10.20.23.83
+#hs.permit-center.server.port=8024
+hs.permit-center.server.ip=192.168.94.153
+hs.permit-center.server.port=9090
 
 
+#hs.mq.binder.local_rabbit_permit.type=rabbit
+##hs.mq.binder.local_rabbit.host=127.0.0.1
+#hs.mq.binder.local_rabbit_permit.host=192.168.94.153
+#hs.mq.binder.local_rabbit_permit.port=5672
+#hs.mq.binder.local_rabbit_permit.username=guest
+#hs.mq.binder.local_rabbit_permit.password=guest
 
-hs.mq.binder.local_rabbit.type=rabbit
-hs.mq.binder.local_rabbit.host=127.0.0.1
-hs.mq.binder.local_rabbit.port=5672
-hs.mq.binder.local_rabbit.username=guest
-hs.mq.binder.local_rabbit.password=guest
+#hs.mq.bindings.output.licenseProvider.binder=local_rabbit
+#hs.mq.bindings.output.licenseProvider.destination=exchange.licence
+#
+#hs.mq.bindings.input.licenseConsumer.binder=local_rabbit
+#hs.mq.bindings.input.licenseConsumer.destination=exchange.licence
+#hs.mq.bindings.input.licenseConsumer.group=licenceQueue
 
-hs.mq.bindings.output.licenseProvider.binder=local_rabbit
-hs.mq.bindings.output.licenseProvider.destination=exchange.licence
+hs.mq.binder.local_rabbit_permit.type=rabbit
+hs.mq.binder.local_rabbit_permit.host=192.168.94.153
+hs.mq.binder.local_rabbit_permit.port=5672
+#hs.mq.binder.local_rabbit_permit.address=127.0.0.1:5672
+hs.mq.binder.local_rabbit_permit.username=admin
+hs.mq.binder.local_rabbit_permit.password=123
 
-
-hs.mq.bindings.input.licenseConsumer.binder=local_rabbit
-hs.mq.bindings.input.licenseConsumer.destination=exchange.licence
+hs.mq.bindings.input.licenseConsumer.binder=local_rabbit_permit
+hs.mq.bindings.input.licenseConsumer.destination=exchange.topic
 hs.mq.bindings.input.licenseConsumer.group=licenceQueue
-
+hs.mq.bindings.input.licenseConsumer.exchangeType=topic
 
