--- a/demo-rpc-server/src/main/resources/application.properties
+++ b/demo-rpc-server/src/main/resources/application.properties
@@ -7,6 +7,7 @@ app.deploy.version=1.0
 config.location=classpath:middleware.properties
 
 hs.license.productName=\u56FD\u5BCC
+hs.license.refresh.cache.task.corn = 0 0 23 * * ?
 #hs.permit-center.server.ip=10.20.23.83
 #hs.permit-center.server.port=8024
 hs.permit-center.server.ip=192.168.94.153
